--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
         body {
             font-family: 'Inter', sans-serif;
         }
+        .logo{
+            position:fixed;
+            bottom:12px;
+            left:12px;
+            width:100px;
+        }
     </style>
 </head>
 <body class="bg-gray-100 min-h-screen flex justify-center items-start py-8">
+    <div class="logo"><img src="logo.png" style="width:100%"></div>
     <div class="bg-white rounded-lg shadow-md p-8 w-full max-w-lg">
         <h1 class="text-2xl font-semibold text-blue-600 mb-6 text-center">Aprende los Pares Craneales</h1>
         <div id="pregunta-container" class="mb-6">
