--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             bottom:12px;
             left:12px;
             width:100px;
+            opacity:0.5;
+            border-radius: 50%;
         }
     </style>
 </head>
