--- a/index.html
+++ b/index.html
@@ -163,17 +163,29 @@ function endGame(){
   <button id="replay" class="btn">Jugar de nuevo</button>`;
   document.getElementById("replay").onclick=welcome;
 
-  // guardar score
-  const key="scores"; let scores=JSON.parse(localStorage.getItem(key)||"[]");
-  scores.push({name:player,score:totalScore,date:Date.now()});
-  scores=scores.sort((a,b)=>b.score-a.score).slice(0,10);
-  localStorage.setItem(key,JSON.stringify(scores));
+  // obtener IP y guardar score
+  fetch("https://api.ipify.org?format=json")
+    .then(res => res.json())
+    .then(data => {
+      const ip = data.ip;
+      saveScore(ip);
+    }).catch(() => {
+      saveScore("desconocida");
+    });
 
-  // pintar tabla
-  const rows=scores.map((s,i)=>`<tr><td>${i+1}</td><td>${s.name}</td><td>${s.score}</td></tr>`).join("");
-  document.getElementById("tableWrap").innerHTML=
-    `<table><tr><th>#</th><th>Nombre</th><th>Puntos</th></tr>${rows}</table>`;
+  function saveScore(ip){
+    const key = "scores";
+    let scores = JSON.parse(localStorage.getItem(key)||"[]");
+    scores.push({name: player, score: totalScore, ip, date: Date.now()});
+    scores = scores.sort((a,b)=>b.score - a.score).slice(0,10);
+    localStorage.setItem(key, JSON.stringify(scores));
+    renderScoreTable(); // actualizar panel flotante
+    const rows = scores.map((s,i)=>`<tr><td>${i+1}</td><td>${s.name}</td><td>${s.score}</td><td>${s.ip || "-"}</td></tr>`).join("");
+    document.getElementById("tableWrap").innerHTML =
+      `<table><tr><th>#</th><th>Nombre</th><th>Puntos</th><th>IP</th></tr>${rows}</table>`;
+  }
 }
+
 
 // -------------- HOTKEY  ----------------
 // Shift derecho (e.code === 'ShiftRight') + Q
@@ -191,6 +203,54 @@ document.addEventListener("keyup",e=>{
 
 // Lanzar pantalla inicial
 welcome();
+// ---- SHOW / HIDE SCORE TABLE -------
+const scoreToggleBtn = document.createElement("button");
+scoreToggleBtn.textContent = "🏆 Ver tabla de posiciones";
+scoreToggleBtn.style.cssText = `
+  position: fixed; bottom: 60px; right: 14px;
+  background: #2074ff; color: #fff; border: none;
+  padding: 10px 16px; border-radius: 8px; cursor: pointer;
+  font-weight: bold; box-shadow: 0 2px 8px rgba(0,0,0,0.2)
+`;
+document.body.appendChild(scoreToggleBtn);
+
+const scorePanel = document.createElement("div");
+scorePanel.style.cssText = `
+  position: fixed; bottom: 120px; right: 14px;
+  background: #fff; border: 1px solid #ccc;
+  max-height: 260px; width: 320px; overflow-y: auto;
+  padding: 12px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+  display: none; z-index: 1000;
+`;
+document.body.appendChild(scorePanel);
+
+scoreToggleBtn.onclick = () => {
+  if (scorePanel.style.display === "none") {
+    renderScoreTable();
+    scorePanel.style.display = "block";
+  } else {
+    scorePanel.style.display = "none";
+  }
+};
+
+function renderScoreTable() {
+  const scores = JSON.parse(localStorage.getItem("scores") || "[]");
+  if (scores.length === 0) {
+    scorePanel.innerHTML = "<em>No hay puntuaciones registradas.</em>";
+    return;
+  }
+  const rows = scores.map((s, i) =>
+    `<tr><td>${i+1}</td><td>${s.name}</td><td>${s.score}</td><td style="font-size:11px">${s.ip || "-"}</td></tr>`
+  ).join("");
+  scorePanel.innerHTML = `
+    <strong>Top jugadores</strong>
+    <table style="width:100%; margin-top:8px; font-size:13px">
+      <tr><th>#</th><th>Nombre</th><th>Pts</th><th>IP</th></tr>
+      ${rows}
+    </table>
+  `;
+}
+
 </script>
 </body>
 </html>
